[CHR-10] Add pagination and new endpoint for GetEmployeeCartsInTrip
